--- a/GitHubSearcher/scenes/details/Details.storyboard
+++ b/GitHubSearcher/scenes/details/Details.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Details View Controller-->
         <scene sceneID="mdP-wV-gVc">
             <objects>
-                <viewController id="eLX-kL-F1e" sceneMemberID="viewController">
+                <viewController id="eLX-kL-F1e" customClass="DetailsViewController" customModule="GitHubSearcher" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0fr-s3-mi3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
