--- a/GitHubSearcher/scenes/searcher/Searcher.storyboard
+++ b/GitHubSearcher/scenes/searcher/Searcher.storyboard
@@ -17,13 +17,37 @@
                     <view key="view" contentMode="scaleToFill" id="LvW-M1-YPK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nCm-p6-XSr">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="bpn-EY-nfW"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aRo-ia-3as">
+                                <rect key="frame" x="0.0" y="58" width="375" height="609"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aRo-ia-3as" firstAttribute="top" secondItem="nCm-p6-XSr" secondAttribute="bottom" constant="8" id="5OY-dO-5V7"/>
+                            <constraint firstItem="aRo-ia-3as" firstAttribute="bottom" secondItem="9hg-sl-HgO" secondAttribute="bottom" id="8u3-V2-8L1"/>
+                            <constraint firstItem="aRo-ia-3as" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" id="D20-VX-agH"/>
+                            <constraint firstItem="aRo-ia-3as" firstAttribute="trailing" secondItem="9hg-sl-HgO" secondAttribute="trailing" id="Mm9-pl-R0e"/>
+                            <constraint firstItem="nCm-p6-XSr" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" id="Mrx-c4-Wha"/>
+                            <constraint firstItem="9hg-sl-HgO" firstAttribute="trailing" secondItem="nCm-p6-XSr" secondAttribute="trailing" id="URJ-MI-S7h"/>
+                            <constraint firstItem="nCm-p6-XSr" firstAttribute="top" secondItem="LvW-M1-YPK" secondAttribute="top" id="vhD-AY-9wo"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="9hg-sl-HgO"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aow-8d-WYX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="30" y="169"/>
+            <point key="canvasLocation" x="29.600000000000001" y="168.6656671664168"/>
         </scene>
     </scenes>
 </document>
