--- a/GitHubSearcher/scenes/searcher/Searcher.storyboard
+++ b/GitHubSearcher/scenes/searcher/Searcher.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QcG-E0-NAc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Her-R4-J35">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="xcQ-Lo-wqj">
+            <objects>
+                <navigationController id="Her-R4-J35" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IUp-e6-fyh">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="QcG-E0-NAc" kind="relationship" relationship="rootViewController" id="XFR-8r-BWG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xam-MU-sWe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1148" y="169"/>
+        </scene>
         <!--Searcher View Controller-->
         <scene sceneID="Ax3-We-TPa">
             <objects>
@@ -19,7 +35,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nCm-p6-XSr">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="100" width="375" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="bpn-EY-nfW"/>
                                 </constraints>
@@ -28,7 +44,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aRo-ia-3as">
-                                <rect key="frame" x="0.0" y="58" width="375" height="609"/>
+                                <rect key="frame" x="0.0" y="158" width="375" height="509"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -40,10 +56,11 @@
                             <constraint firstItem="aRo-ia-3as" firstAttribute="trailing" secondItem="9hg-sl-HgO" secondAttribute="trailing" id="Mm9-pl-R0e"/>
                             <constraint firstItem="nCm-p6-XSr" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" id="Mrx-c4-Wha"/>
                             <constraint firstItem="9hg-sl-HgO" firstAttribute="trailing" secondItem="nCm-p6-XSr" secondAttribute="trailing" id="URJ-MI-S7h"/>
-                            <constraint firstItem="nCm-p6-XSr" firstAttribute="top" secondItem="LvW-M1-YPK" secondAttribute="top" id="vhD-AY-9wo"/>
+                            <constraint firstItem="nCm-p6-XSr" firstAttribute="top" secondItem="LvW-M1-YPK" secondAttribute="top" constant="100" id="vhD-AY-9wo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9hg-sl-HgO"/>
                     </view>
+                    <navigationItem key="navigationItem" id="ua3-j8-sUN"/>
                     <connections>
                         <outlet property="searcherTableView" destination="aRo-ia-3as" id="ZZN-XF-4TH"/>
                         <outlet property="searcherTextField" destination="nCm-p6-XSr" id="NTE-QF-BEz"/>
