--- a/GitHubSearcher/scenes/details/Details.storyboard
+++ b/GitHubSearcher/scenes/details/Details.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eLX-kL-F1e">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,17 +13,18 @@
         <!--Details View Controller-->
         <scene sceneID="mdP-wV-gVc">
             <objects>
-                <viewController id="eLX-kL-F1e" customClass="DetailsViewController" customModule="GitHubSearcher" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailsViewController" id="eLX-kL-F1e" customClass="DetailsViewController" customModule="GitHubSearcher" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0fr-s3-mi3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="P2V-BF-V4b"/>
                     </view>
+                    <navigationItem key="navigationItem" id="4Ur-qP-deE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ACT-bS-F2C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="94" y="141"/>
+            <point key="canvasLocation" x="-790" y="135"/>
         </scene>
     </scenes>
 </document>
