Connect UserDetails elemnts with UserDetailsController

--- a/GitHubSearcher/scenes/details/user/UserDetails.storyboard
+++ b/GitHubSearcher/scenes/details/user/UserDetails.storyboard
@@ -60,6 +60,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="HRa-fW-64Q"/>
                     </view>
+                    <connections>
+                        <outlet property="avatarImageView" destination="hFK-Ao-y0O" id="d1S-1z-Yij"/>
+                        <outlet property="repositoriesTableView" destination="d4g-Q4-Q4Y" id="6hZ-aW-CBW"/>
+                        <outlet property="scoreLabel" destination="acS-su-DeR" id="yQz-g4-DA6"/>
+                        <outlet property="usernameLabel" destination="J78-Vu-5Kw" id="9xn-V5-PnL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cd7-Mr-eOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
