--- a/GitHubSearcher/scenes/searcher/Searcher.storyboard
+++ b/GitHubSearcher/scenes/searcher/Searcher.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Her-R4-J35">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <navigationController id="Her-R4-J35" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IUp-e6-fyh">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -31,11 +31,11 @@
             <objects>
                 <viewController id="QcG-E0-NAc" customClass="SearcherViewController" customModule="GitHubSearcher" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LvW-M1-YPK">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nCm-p6-XSr">
-                                <rect key="frame" x="8" y="72" width="359" height="40"/>
+                                <rect key="frame" x="8" y="72" width="242" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="bpn-EY-nfW"/>
                                 </constraints>
@@ -44,26 +44,70 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aRo-ia-3as">
-                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="120" width="320" height="448"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SUL-Id-DTI">
+                                <rect key="frame" x="0.0" y="498" width="320" height="70"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XKC-B1-V7x">
+                                        <rect key="frame" x="50" y="20" width="46" height="30"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" red="0.55932092666625977" green="0.085684813559055328" blue="0.1281314492225647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYV-Oh-CWC">
+                                        <rect key="frame" x="224" y="20" width="46" height="30"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="gYV-Oh-CWC" firstAttribute="top" secondItem="SUL-Id-DTI" secondAttribute="top" constant="20" id="Ea3-s0-2eU"/>
+                                    <constraint firstAttribute="bottom" secondItem="gYV-Oh-CWC" secondAttribute="bottom" constant="20" id="LOy-dt-f9I"/>
+                                    <constraint firstItem="XKC-B1-V7x" firstAttribute="leading" secondItem="SUL-Id-DTI" secondAttribute="leading" constant="50" id="PoV-e6-4Gv"/>
+                                    <constraint firstAttribute="height" constant="70" id="RRX-Xj-CWj"/>
+                                    <constraint firstAttribute="trailing" secondItem="gYV-Oh-CWC" secondAttribute="trailing" constant="50" id="VFu-uQ-70G"/>
+                                    <constraint firstAttribute="bottom" secondItem="XKC-B1-V7x" secondAttribute="bottom" constant="20" id="bm3-4p-O0O"/>
+                                    <constraint firstItem="XKC-B1-V7x" firstAttribute="top" secondItem="SUL-Id-DTI" secondAttribute="top" constant="20" id="lLy-7B-QcV"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LFm-h0-Iyh">
+                                <rect key="frame" x="258" y="72" width="54" height="40"/>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="yrP-rd-UGR"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="aRo-ia-3as" firstAttribute="top" secondItem="nCm-p6-XSr" secondAttribute="bottom" constant="8" id="5OY-dO-5V7"/>
                             <constraint firstItem="aRo-ia-3as" firstAttribute="bottom" secondItem="9hg-sl-HgO" secondAttribute="bottom" id="8u3-V2-8L1"/>
+                            <constraint firstItem="SUL-Id-DTI" firstAttribute="trailing" secondItem="9hg-sl-HgO" secondAttribute="trailing" id="BYR-5C-osm"/>
                             <constraint firstItem="aRo-ia-3as" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" id="D20-VX-agH"/>
                             <constraint firstItem="aRo-ia-3as" firstAttribute="trailing" secondItem="9hg-sl-HgO" secondAttribute="trailing" id="Mm9-pl-R0e"/>
                             <constraint firstItem="nCm-p6-XSr" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" constant="8" id="Mrx-c4-Wha"/>
-                            <constraint firstItem="9hg-sl-HgO" firstAttribute="trailing" secondItem="nCm-p6-XSr" secondAttribute="trailing" constant="8" id="URJ-MI-S7h"/>
+                            <constraint firstItem="9hg-sl-HgO" firstAttribute="bottom" secondItem="SUL-Id-DTI" secondAttribute="bottom" id="Pko-PA-iIL"/>
+                            <constraint firstItem="9hg-sl-HgO" firstAttribute="trailing" secondItem="nCm-p6-XSr" secondAttribute="trailing" constant="70" id="URJ-MI-S7h"/>
+                            <constraint firstItem="aRo-ia-3as" firstAttribute="top" secondItem="LFm-h0-Iyh" secondAttribute="bottom" constant="8" id="Vrc-gi-f6s"/>
+                            <constraint firstItem="LFm-h0-Iyh" firstAttribute="leading" secondItem="nCm-p6-XSr" secondAttribute="trailing" constant="8" id="a55-gJ-dX7"/>
+                            <constraint firstItem="SUL-Id-DTI" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" id="imR-Cj-OTx"/>
                             <constraint firstItem="nCm-p6-XSr" firstAttribute="top" secondItem="9hg-sl-HgO" secondAttribute="top" constant="8" id="jfp-Ka-LVg"/>
+                            <constraint firstItem="9hg-sl-HgO" firstAttribute="trailing" secondItem="LFm-h0-Iyh" secondAttribute="trailing" constant="8" id="zhU-df-QLo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9hg-sl-HgO"/>
                     </view>
                     <navigationItem key="navigationItem" id="ua3-j8-sUN"/>
                     <connections>
+                        <outlet property="filterTypeView" destination="SUL-Id-DTI" id="eSe-nH-J3z"/>
                         <outlet property="searcherTableView" destination="aRo-ia-3as" id="ZZN-XF-4TH"/>
                         <outlet property="searcherTextField" destination="nCm-p6-XSr" id="NTE-QF-BEz"/>
+                        <outlet property="showFilterTypeButton" destination="LFm-h0-Iyh" id="sp4-Co-HNU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aow-8d-WYX" userLabel="First Responder" sceneMemberID="firstResponder"/>
