--- a/GitHubSearcher/scenes/searcher/cell/repository/RepositoryTableViewCell.xib
+++ b/GitHubSearcher/scenes/searcher/cell/repository/RepositoryTableViewCell.xib
@@ -1,21 +1,72 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RepositoryTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RepositoryTableViewCell" rowHeight="80" id="KGk-i7-Jjw" customClass="RepositoryTableViewCell" customModule="GitHubSearcher" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repository Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gb-cz-7HG">
+                        <rect key="frame" x="8" y="8" width="137.5" height="21"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="253" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFP-Db-R2S">
+                        <rect key="frame" x="267.5" y="19" width="44.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Description Description Description" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IbQ-Rs-dvV">
+                        <rect key="frame" x="8" y="37" width="214.5" height="35"/>
+                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="10"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0h-sD-NFx" customClass="Re">
+                        <rect key="frame" x="230.5" y="48" width="81.5" height="24"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="HFP-Db-R2S" secondAttribute="trailing" constant="8" id="1ZR-DC-FtV"/>
+                    <constraint firstAttribute="bottom" secondItem="IbQ-Rs-dvV" secondAttribute="bottom" constant="8" id="7fn-wJ-Dhw"/>
+                    <constraint firstAttribute="trailing" secondItem="G0h-sD-NFx" secondAttribute="trailing" constant="8" id="EdE-1r-lSj"/>
+                    <constraint firstItem="HFP-Db-R2S" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="F3u-Aj-h8V"/>
+                    <constraint firstItem="G0h-sD-NFx" firstAttribute="top" secondItem="HFP-Db-R2S" secondAttribute="bottom" constant="8" id="G6h-L5-WeN"/>
+                    <constraint firstItem="IbQ-Rs-dvV" firstAttribute="top" secondItem="3Gb-cz-7HG" secondAttribute="bottom" constant="8" id="MQ4-z8-Ser"/>
+                    <constraint firstItem="3Gb-cz-7HG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="crV-hn-BtJ"/>
+                    <constraint firstItem="G0h-sD-NFx" firstAttribute="leading" secondItem="IbQ-Rs-dvV" secondAttribute="trailing" constant="8" id="d9e-35-Gfa"/>
+                    <constraint firstItem="3Gb-cz-7HG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="eeA-6N-7zV"/>
+                    <constraint firstItem="IbQ-Rs-dvV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="gby-In-ouQ"/>
+                    <constraint firstAttribute="bottom" secondItem="G0h-sD-NFx" secondAttribute="bottom" constant="8" id="gct-37-2a8"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="descriptionLabel" destination="IbQ-Rs-dvV" id="TTL-MI-0w9"/>
+                <outlet property="nameLabel" destination="3Gb-cz-7HG" id="zHu-lS-uAQ"/>
+                <outlet property="scoreLabel" destination="HFP-Db-R2S" id="mBw-Dg-lNM"/>
+                <outlet property="userNameLabel" destination="G0h-sD-NFx" id="1in-1C-Loe"/>
+            </connections>
+            <point key="canvasLocation" x="34" y="69"/>
         </tableViewCell>
     </objects>
 </document>
