--- a/GitHubSearcher/scenes/searcher/cell/user/UserTableViewCell.xib
+++ b/GitHubSearcher/scenes/searcher/cell/user/UserTableViewCell.xib
@@ -1,21 +1,61 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="GitHubSearcher" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FWv-5P-62Y">
+                        <rect key="frame" x="5" y="2" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="kXs-yf-cAU"/>
+                            <constraint firstAttribute="width" constant="40" id="zFS-Bw-CLl"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="userLogin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGI-78-JYi">
+                        <rect key="frame" x="65" y="11.5" width="75.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JxA-ky-esg">
+                        <rect key="frame" x="258" y="11.5" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="FWv-5P-62Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="5C6-hP-F8y"/>
+                    <constraint firstItem="cGI-78-JYi" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="71H-XQ-uJc"/>
+                    <constraint firstAttribute="bottom" secondItem="FWv-5P-62Y" secondAttribute="bottom" constant="2" id="Dye-v8-zIt"/>
+                    <constraint firstItem="FWv-5P-62Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="OR1-B2-YJW"/>
+                    <constraint firstItem="JxA-ky-esg" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="PYF-4h-quM"/>
+                    <constraint firstAttribute="trailing" secondItem="JxA-ky-esg" secondAttribute="trailing" constant="20" id="XgN-rA-YQZ"/>
+                    <constraint firstItem="cGI-78-JYi" firstAttribute="leading" secondItem="FWv-5P-62Y" secondAttribute="trailing" constant="20" id="lWv-TM-Go3"/>
+                    <constraint firstItem="FWv-5P-62Y" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="qGf-hH-i7H"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="avatarImageView" destination="FWv-5P-62Y" id="6a2-V1-A6O"/>
+                <outlet property="loginLabel" destination="cGI-78-JYi" id="FN1-Lc-2Df"/>
+                <outlet property="scoreLabel" destination="JxA-ky-esg" id="wv0-Dt-Zej"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
